[project]
name = "gomalock"
version = "0.3.0"
description = ""
authors = [
    {name = "meronepy",email = "203420124+meronepy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak (>=1.0.1,<2.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "gomalock", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
