[project]
name = "gomalock"
version = "0.3.1"
description = "A library for controlling Sesame 5 smart locks via BLE."
authors = [{ name = "meronepy", email = "203420124+meronepy@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "bleak>=1.1.0",
    "pycryptodome>=3.23.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/gomalock"]

[tool.hatch.build.targets.wheel]
include = ["src/gomalock"]

[tool.hatch.build.targets.wheel.sources]
"src/gomalock" = "gomalock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
