[project]
name = "gomalock"
version = "1.1.2"
description = "A Python library for controlling Sesame smart locks over Bluetooth Low Energy."
authors = [{ name = "meronepy", email = "203420124+meronepy@users.noreply.github.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "bleak>=3.0.2",
    "pycryptodome>=3.23.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/gomalock"]

[tool.hatch.build.targets.wheel]
include = ["src/gomalock"]

[tool.hatch.build.targets.wheel.sources]
"src/gomalock" = "gomalock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "qrcode>=8.2",
    "ruff>=0.15.12",
]
